@@ -7,6 +7,8 @@
 - Changed the nested array result for documents into a structure where each
   ezcSearchResult contains an array of ezcSearchResultDocument objects, which
   on its turn contain the score, highlighting and document itself.
+- Changed the default limit fo returned search results for the Solr handler
+  from 10 to unlimited (well, 999999).
 
 
 1.0alpha2 - Tuesday 13 May 2008
